--- a/secure-auth-system/.gitignore
+++ b/secure-auth-system/.gitignore
@@ -39,3 +39,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/src/generated/prisma
+
+/app/generated/prisma
+
+/src/app/generated/prisma
+
+/src/app/generated/prisma
+
+/src/generated/prisma
