--- a/secure-auth-system/package.json
+++ b/secure-auth-system/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
