--- a/employee-mgt-system/package.json
+++ b/employee-mgt-system/package.json
@@ -14,13 +14,16 @@
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
+    "csv-parse": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.4.2",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "use-debounce": "^10.0.5",
     "zod": "^4.0.5",
     "zustand": "^5.0.6"
   },
@@ -30,13 +33,16 @@
     "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "prisma": "^6.12.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.3",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
