--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@tanstack/react-query": "^5.84.1",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
